Prevent numbers bigger than display from overflowing

--- a/styles.css
+++ b/styles.css
@@ -44,10 +44,8 @@ body {
     background-color: black;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
     border: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-.main, .sub {
-    border: 1px solid white;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .sub {
